hphp/test/zend/good/ext/gd/tests/createfromwbmp.php.skipif
<?php
        if (!function_exists('imagecreatefromwbmp')) die("skip gd extension not available\n");
?>